@@ -9,8 +9,9 @@ xapian-bindings (0.9.8-1) unstable; urgency=low
   * debian/control.in,debian/control-php.in: Add "Suggests: xapian-doc" since
     the xapian-core documentation is useful reading for people developing
     using xapian-bindings.
+  * debian/rules: Use python-all-dev where we can.
 
- -- Olly Betts <olly@survex.com>  Sat,  4 Nov 2006 15:29:05 +0000
+ -- Olly Betts <olly@survex.com>  Sat,  4 Nov 2006 22:02:05 +0000
 
 xapian-bindings (0.9.7-2) unstable; urgency=low
 
